fixed: Alignment of slider

--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,7 @@ body::after {
 
 .thumbs-wrapper{
   position: absolute;
-  right: 25%;
+  right: 24%;
   z-index: 10;
 }
 
